# ml

./: .gitignore  README.md  gradient_descent.py  linear_regression.py  pyproject.toml
linear-algebra/: determinant_method.py  gemm.py  linalg.py  linalg_basics.py  linalg_basics_test.py
low-level/: matrix_mult.cpp  omp.h  simd.py
misc/: hex_to_decimal.py  word_embeddings.py  xgboost.ipynb
neural_nets/: conv2dlayer.py  convnet.py  perceptron.py
probability/: birthday_paradox.py
src/build-a-large-language-model-from-scratch/: 2-working-with-text-data.ipynb  3-coding-attention-mechanisms.ipynb  4-implementing-a-GPT-model-from-scratch-to-generate-text.ipynb
src/build_a_large_language_model_from_scratch/: 4-implementing-a-GPT-model-from-scratch-to-generate-text.ipynb  5-pretraining-on-unlabeled-data.ipynb  6-fine-tuning-for-classification.ipynb  7-fine-tuning-to-follow-instructions.ipynb  README.md
src/build_a_large_language_model_from_scratch/lib/: GPTModel.py  LoRA.py  dataloader.py  generate.py  load_weights.py  loss.py  plot.py  train.py
src/diff/: autodiff.ipynb
src/grad/: README.md  engine.py  example.py  nn.py  notebook.ipynb
src/homl3/: chapter14_cnns.ipynb  chapter15_cnns.ipynb  chapter15_rnns.ipynb  chapter16_nlp.ipynb  chapter17_autoencoders_gans_diffusion.ipynb  chapter18_reinforcement_learning.ipynb
src/ml/: __main__.py
src/papers/show_attend_tell/: .gitignore  README.md  eval_metrics.py  inference.py  train.py
src/papers/show_attend_tell/data/: build_vocab.py  dataset.py  download.sh
src/papers/show_attend_tell/models/: attention.py  decoder.py  encoder.py
src/papers/vision_transformer/: inspect_vit.py  main.py
