[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Christian Bager Bach Houmann", email = "christian@bagerbach.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "ipykernel>=6.29.3",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.3",
    "graphviz>=0.20.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
