[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Christian Bager Bach Houmann", email = "christian@bagerbach.com" }
]
dependencies = [
    "numpy",
    "ipykernel>=6.29.3",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.3",
    "graphviz>=0.20.2",
    "torch==2.2.1+cu118",
    "keras>=3.2.1",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "tensorflow>=2.17.0",
    "tqdm>=4.64.1",
    "torchvision==0.19.0+cu118",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
