[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Christian Bager Bach Houmann", email = "christian@bagerbach.com" }
]
dependencies = [
    "numpy",
    "ipykernel>=6.29.3",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.3",
    "graphviz>=0.20.2",
    "keras>=3.2.1",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "tensorflow>=2.17.0",
    "tqdm>=4.64.1",
    "gymnasium[all]>=0.29.1",
    "tiktoken>=0.8.0",
    "torchvision>=0.20.1",
    "nltk>=3.9.1",
    "kagglehub>=0.3.6",
    "transformers>=4.49.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]
